<resources>
    <string name="app_name">Customer Relation</string>

    <!-- LOGIN ACTIVITY -->

    <string name="login">Welcome - Please log in</string>
    <string name="loginPassword">Password</string>
    <string name="loginUsername">Username - Email</string>
    <string name="loginBtn">Login</string>
    <string name="title_activity_main">Customer relation</string>

    <!-- MAIN ACTIVITY -->
    <string name="userData">Jacob Ferdinandsen</string>
    <string name="btnDownLoadList">Download</string>
    <string name="loadedClients">Cache</string>
    <string name="picture">picture</string>
    <string name="action_settings">settings</string>
    <string name="title_activity_client">Companies</string>

    <!-- COMPANY ACTIVITY -->
    <string name="btnGet">Show Client</string>
    <string name="title_activity_client_data">Company data</string>

    <string name="group">Group: </string>
    <string name="businessRelation">Business relation: </string>
    <string name="company">Company name: </string>
    <string name="address">Address: </string>
    <string name="seNumber">SE no: </string>
    <string name="telephone">Telephone: </string>
    <string name="zipcode_city">Zip: </string>

    <string name="companyName">Company</string>
    <string name="canvasAmount">CanvasAmount</string>

    <string name="txtSearchHint">search</string>


    <!-- CANVAS ACTIVITY -->
    <string name="btnCreateCanvas">Create New Canvas</string>
    <string name="btnShowCanvas">Show Canvas</string>

    <string name="title_activity_canvas">Create new canvas</string>
    <string name="enterText">Enter text here</string>

    <string name="btnSave">Save</string>

    <string name="lblRegion">Region</string>
    <string name="lblCountry">Country</string>
    <string name="lblTypeOfTransport">Type of transport</string>
    <string name="lblActivityType">Activity type</string>
    <string name="lblBusinessArea">Business area</string>
    <string name="lblOffice">Office</string>

    <string name="lblFollowUpDate">Follow Up Date</string>
    <string name="lblTypeOfVisit">TypeOfVisit</string>
    <string name="lblVisitBy">VisitBy</string>
    <string name="lblSubject">Subject</string>
    <string name="lblDate">Date</string>
    <string name="lblFrom">From</string>
    <string name="lblToInternal">ToInternal</string>
    <string name="FollowUpBy">Follow Up By</string>

    <string name="lblComments">Comments</string>
    <string name="hello_world">NULL</string>
    <string name="date"> Date</string>

    <!--ShowCanvas-->
    <string name="title_activity_show_canvas">Canvas</string>

    <string name="info">info</string>
    <string name="more">more</string>
    <string name="title_activity_company_main">CompanyMainActivity</string>
    <string name="title_fragment_canvas">Canvas</string>


    <!-- Contacts tab -->
    <string name="contactEmailLbl"> Contact E-Mail: </string>
    <string name="contactPhoneLbl"> Phone: </string>
    <string name="contactNameLbl"> Contact: </string>
    <string name="contactAddressLbl"> Address: </string>
    <string name="contactZipcodeLbl"> Zipcode and City: </string>
    <string name="contactCountryLbl"> Country: </string>
    <string name="contactMobilephoneLbl"> Mobile phone: </string>
    <string name="contactFaxLbl"> Contact fax: </string>
    <string name="additionalContacts"> Additional Contacts </string>
    <string name="addContactsName"> Name </string>
    <string name="addContactsPhone"> Phone </string>
    <string name="addContactsmobile"> Mobil </string>
</resources>
