<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bws.customerrelation.GUI.Company.CompanyDataActivity">


    <LinearLayout
        android:id="@+id/scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/LinearButtonLayout"
        android:layout_below="@+id/linearLayoutData"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/canvasListView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:id="@+id/linear_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_listview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentEnd="true"
        android:baselineAligned="false">

            <TextView
                android:layout_gravity="center"
                android:id="@+id/companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/companyName" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <TextView
                android:id="@+id/zipcode_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zipcode_city" />

            <TextView
                android:id="@+id/businessRelation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/businessRelation" />

            <TextView
                android:id="@+id/telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telephone" />


        </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnCreateCanvas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCreateCanvas" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnShowCanvas"
            android:text="@string/btnShowCanvas"/>

    </LinearLayout>


</RelativeLayout>
