<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bws.customerrelation.GUI.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userData"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
                <ListView
                    android:id="@+id/clientListView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:choiceMode="multipleChoice">
                </ListView>

    </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/linearLayout2"
                android:gravity="center"
                >

                <Button
                    android:id="@+id/btnDownloadList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnDownLoadList"
                    android:textSize="15sp"
                    style='"?android:attr/buttonBarButtonStyle"' />

        </LinearLayout>

    <ImageView
        android:id="@+id/bwsNet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/picture"
        android:src="@drawable/abc_btn_check_to_on_mtrl_015"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_alignEnd="@+id/linearLayout3" />

</RelativeLayout>
